[package]
name = "go-tool-dist-list"
version = "0.1.1"
authors = ["Dmitrii Demenev <demenev.dmitriy1@gmail.com>"]
edition = "2021"
rust-version = "1.56.1" # https://github.com/foresterre/cargo-msrv/issues/244
description = "Get the list of targets supported by go compiler."
documentation = "https://docs.rs/go-tool-dist-list"
readme = "README.md"
repository = "https://github.com/JohnScience/go-tool-dist-list"
license = "MIT OR Apache-2.0"
# license-file | not needed
keywords = ["golang", "go", "targets", "triplets"]
categories = ["development-tools::build-utils"] # https://crates.io/category_slugs
# workspace | not needed
# build | not needed
# links | not needed
# exclude | not needed
autobins = false
autoexamples = false
autotests = false
autobenches = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
